--- a/aftersign.html
+++ b/aftersign.html
@@ -11,6 +11,8 @@
   </style>
 </head>
 <body class="bg-dark" style="font-family:cursive;font-size: large;";>
+
+
   <!-- nav bar start -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
@@ -42,7 +44,25 @@
   <!-- end of navbar -->
 
 
+
   <div class="container text-white" style="margin-top:80px" >
+    <div id="leaves">
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i> 
+  </div>
     
   <div class="row text-white" style="margin: auto; width:50%;">
     <h4 class="text-uppercase">Confirm User Creation</h4><br>
@@ -66,6 +86,8 @@
     
   </div>
   </div>
+
+
   
 
 </body>
